--- a/src/Components/Products/ProductCard.css
+++ b/src/Components/Products/ProductCard.css
@@ -5,7 +5,7 @@
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   width: 250px;
   padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
   margin: 20px;
 }
@@ -15,6 +15,7 @@
   width: 100%;
   height: 150px;
   object-fit: cover;
+  transition: transform 0.3s ease;
 }
 
 /* Detalles del producto */
